--- a/index.html
+++ b/index.html
@@ -8,6 +8,71 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="caixa">
+        <div class="imagem">
+            <img src="images/images/side-image.jpg" alt="#">
+        </div>
+
+        <div class="conteudo">
+                <div class="logo">
+                    <img src="images/images/logo.svg" alt="#">
+                </div>
+            <div class="interno">
+                <div class="interno1">
+                    <div class="login">
+                        <img src="images/images/log-in.svg" alt="#">
+                        <h2>
+                            Faça seu login
+                        </h2>
+                    </div>
+                        <h3 id="loginh3">
+                            Entre com as suas informações de cadastro.
+                        </h3>
+                    
+                    <div class="email">
+                        <h3>
+                            E-mail:
+                        </h3>
+                        <input 
+                            type="email" 
+                            name="email" 
+                            id="#" 
+                            placeholder="Digite seu e-mail">
+                    </div>
+
+                    <div class="senha">
+                        <h3>
+                            Senha:
+                        </h3>
+                        <input 
+                            type="password" 
+                            name="senha" 
+                            id="" 
+                            placeholder="Digite sua senha">
+                    </div>
+
+                    <div class="check">
+                        <input 
+                            type="checkbox" 
+                            name="" 
+                            id=""> Lembre-me
+                        <a href="#">
+                            Esqueci minha senha
+                        </a>
+                    </div>
+
+                        <button>
+                            <strong>ENTRAR</strong>
+                        </button>
+
+                    <div class="link">
+                        <a href="#">
+                            Não tem uma conta? <strong>Registre-se</strong>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
