--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
         </div>
 
         <div class="conteudo">
-                <div class="logo">
                     <img src="images/images/logo.svg" alt="#">
-                </div>
             <div class="interno">
                 <div class="interno1">
-                    <div class="login">
+                    <div class="partep">
                         <img src="images/images/log-in.svg" alt="#">
                         <h2>
                             Faça seu login
@@ -69,6 +67,7 @@
                         <a href="#">
                             Não tem uma conta? <strong>Registre-se</strong>
                         </a>
+                
                     </div>
                 </div>
             </div>
