--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="conteudo">
-                    <img src="images/images/logo.svg" alt="#">
+                    <img class="logo" src="images/images/logo.svg" alt="#">
             <div class="interno">
                 <div class="interno1">
                     <div class="partep">
