--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="caixa">
-        <div class="imagem">
+    <div class="section-conteudo">
+        <div class="imagem-principal">
             <img src="images/images/side-image.jpg" alt="#">
         </div>
 
         <div class="conteudo">
                     <img class="logo" src="images/images/logo.svg" alt="#">
-            <div class="interno">
-                <div class="interno1">
-                    <div class="partep">
+            <div class="conteudo-externo">
+                <div class="conteudo-interno">
+                    <div class="">
                         <img src="images/images/log-in.svg" alt="#">
                         <h2>
                             Faça seu login
